// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single image 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(foo)",
    }
  }
>
  <div>
    <div
      className="others"
    >
      <div
        className="others-inner"
      />
    </div>
  </div>
</div>
`;

exports[`renders multiple images 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(foo)",
    }
  }
>
  <div>
    <div
      className="others"
    >
      <div
        className="others-inner"
      >
        <a
          className="other"
          href="bar"
          key="bar"
          target="_blank"
        >
          <div
            style={
              Object {
                "backgroundImage": "url(bar)",
              }
            }
          />
        </a>
        <a
          className="other"
          href="baz"
          key="baz"
          target="_blank"
        >
          <div
            style={
              Object {
                "backgroundImage": "url(baz)",
              }
            }
          />
        </a>
        <a
          className="other"
          href="bonk"
          key="bonk"
          target="_blank"
        >
          <div
            style={
              Object {
                "backgroundImage": "url(bonk)",
              }
            }
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
